<resources>
    <string name="app_name">Git Profile</string>

    <string name="btn_search_tittle">Search user</string>
    <string name="user_name">Name: </string>
    <string name="user_company">Company: </string>
    <string name="user_location">Location: </string>
    <string name="user_blog">Blog: </string>
    <string name="user_detail">User detail</string>
    <string name="search_icon_title">Search</string>
</resources>

