<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/user_detail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivDetailUserAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:srcCompat="@mipmap/ic_launcher" />


    <LinearLayout
        android:id="@+id/llUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_material"
        android:layout_marginTop="@dimen/margin_material"
        android:layout_marginEnd="@dimen/margin_material"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDetailUserAvatar">

        <TextView
            style="@style/UserDetailTittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

        <TextView
            android:id="@+id/tvDetailUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/UserDetailTittleStyle"
            android:layout_marginStart="@dimen/margin_material_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Andriy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUserCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_material"
        android:layout_marginTop="@dimen/margin_material"
        android:layout_marginEnd="@dimen/margin_material"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llUserName">

        <TextView
            style="@style/UserDetailTittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_company" />

        <TextView
            android:id="@+id/tvDetailUserCompany"
            android:layout_width="wrap_content"
            style="@style/UserDetailTittleStyle"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_material_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Andriy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUserLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_material"
        android:layout_marginTop="@dimen/margin_material"
        android:layout_marginEnd="@dimen/margin_material"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llUserCompany">

        <TextView
            style="@style/UserDetailTittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_location" />

        <TextView
            android:id="@+id/tvDetailUserLocation"
            android:layout_width="wrap_content"
            style="@style/UserDetailTittleStyle"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_material_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Andriy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUserBlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_material"
        android:layout_marginTop="@dimen/margin_material"
        android:layout_marginEnd="@dimen/margin_material"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llUserLocation">

        <TextView
            style="@style/UserDetailTittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_blog" />

        <TextView
            android:id="@+id/tvDetailUserBlog"
            style="@style/UserDetailTittleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_material_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Andriy" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>